# financial-tracker

./: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/design-system/: SKILL.md
backend/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  2a12783af665_add_categories_and_transactions.py  87663c31f367_add_recurring_expenses_and_link_.py
backend/src/app/: main.py
backend/src/app/api/: auth.py  categories.py  recurring_expenses.py  transactions.py  users.py
backend/src/app/core/: config.py  deps.py  security.py
backend/src/app/db/: schema.py  seed.py  session.py
backend/src/app/models/: auth.py  category.py  recurring_expense.py  transaction.py  user.py
backend/src/app/services/: auth.py  base.py  categories.py  filters.py  recurring_expenses.py  transactions.py  users.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_integration.py  test_categories_integration.py  test_recurring_expenses_integration.py  test_transactions_integration.py  test_users_integration.py
backend/tests/unit/: test_filters.py
docs/: feature-breakdown.md  prd-finance-manager.md
docs/backend/: ARCHITECTURE.md  CODING_PATTERNS.md  IMPLEMENTATION_CHECKLIST.md
docs/frontend/: ARCHITECTURE.md  CODING_PATTERNS.md  IMPLEMENTATION_CHECKLIST.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/lib/: api-client.ts
(+41 files in other folders)
