[tool.poetry]
name = "financial-tracker"
version = "0.1.0"
description = "AI-powered personal financial tracker"
authors = []
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.129.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
anthropic = "^0.30.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
