[tool.poetry]
name = "financial-tracker"
version = "0.1.0"
description = "Personal financial tracker API"
authors = []
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.132.0"}
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
pydantic = ">=2"
pydantic-settings = "^2.13.1"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
anthropic = "^0.83.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
